--- a/application/admin/view/check/edit.html
+++ b/application/admin/view/check/edit.html
@@ -40,7 +40,8 @@
 </body>
 {include file='public/foot'}
 <script type="text/javascript">
-	var uid = '{$uid}';
+	var uid = "{$uid}";
+	console.log(uid);
 	layui.use(['form', 'layer'], function () {
 
 		var form = layui.form;
