--- a/application/admin/view/goods/goods_attr.html
+++ b/application/admin/view/goods/goods_attr.html
@@ -241,7 +241,7 @@
         var length = $('.form-tr').length;
         var tr = '<tr class="form-tr tr'+length+'">'+
                     '<td>'+
-                        'New<input type="hidden" name="form['+length+'][id]" value="" />'+
+                        'New<input type="hidden" class="id'+length+'" name="form['+length+'][id]" value="" />'+
                     '</td>'+
                     '<td>'+
                         '<input type="text" class="layui-input name'+length+'" name="form['+length+'][name]" value="" placeholder="请输入规格名称" lay-verify="required" autocomplete="off" />'+
