--- a/application/admin/view/member/edit.html
+++ b/application/admin/view/member/edit.html
@@ -145,6 +145,7 @@
                         </tbody>
                     </table>
                     <input type="hidden" name="id" value="{$member.id}" />
+                    <input type="hidden" name="uname" value="{$member.uname}" />
                     <div class="layui-form-item">
                         <div class="layui-input-block">
                             <button class="layui-btn" lay-filter="toSubmit" lay-submit="" style="margin-left: 33%">提交</button>
