--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -5,8 +5,11 @@
         <table id="demo" lay-filter="test"></table>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索会员','search.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索会员','search.html',800,400)">
                     <i class="layui-icon layui-icon-search"></i>搜索
+                </button>
+                <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
+                    <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
             </div>
         </script>
@@ -15,6 +18,202 @@
 {include file="public/foot"}
 <script>
     var tableIns;
+    var role_id = "{$role_id}";
+    console.log(role_id);
+    var tableHead = [ //表头
+        { type: 'checkbox', fixed: 'left' }
+        , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+        , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+        , { field: 'uname', title: '账号', width: '100',fixed: 'left' }
+        , { field: 'realname', title: '姓名', width: '100' }
+        , { field: 'mobile', title: '电话',width:'120' }
+        , { field: 'rank_name', title: '等级', width: '100'}
+        , { field: 'point', title: '积分',width:'100' }
+        , { field: 'area', title: '地区',width:'150',
+            templet:function(d){
+                if(d.county){
+                    var area = d.province_name + '-' + d.city_name + '-' + d.county_name;
+                }else{
+                    var area = '总站';
+                }
+                return area;
+            } 
+        }
+        , { field: 'subor', title: '会员数', width: '100' }
+        , { field: 'topname', title: '上级会员', width: '100' }
+        , { field: 'checked', title: '审核状态', width: '100',
+            templet:function(d){
+                if(d.checked == '0'){
+                    return '待审';
+                }else if(d.checked == '1'){
+                    return '正常';
+                }
+            }
+        }
+        , { field: 'status', title: '会员状态', width: '100',
+            templet:function(d){
+                if(d.status == '0'){
+                    return '正常';
+                }else if(d.status == '1'){
+                    return '锁定';
+                }else{
+                    return '禁言';
+                }
+            }
+        }
+        , { field: 'type', title: '类型',width:'100',
+            templet:function(d){
+                var type = '会员';
+                if(d.type==1){
+                    type = '技工';
+                }else if(d.type==2){
+                    type = '工长';
+                }else if(d.type==3){
+                    type = '设计师';
+                }else if(d.type==4){
+                    type = '装饰公司';
+                }else if(d.type==5){
+                    type = '商家';
+                }else if(d.type==6){
+                    type = '业主';
+                }
+                return type;
+            }
+        }
+        , { field: 'source', title: '来源', width: '100',
+            templet:function(d){
+                var source = 'PC端注册';
+                if(d.source == '1'){
+                    source = '识别二维码';
+                }else if(d.source == '2'){
+                    source = '自主关注';
+                }else if(d.source == '3'){
+                    source = '公众号菜单栏';
+                }else if(d.source == '4'){
+                    source = '分享链接';
+                }
+                return source;
+            }
+        }
+        , { field: 'lastlogin', title: '最后登录',width:'150' }
+        , { field: 'loginip', title: '最后ip', width: '150' }
+        , { field: 'create_time', title: '注册时间', width: '150' }
+        , { field: 'subscribe', title: '是否关注', width: '150',
+            templet:function(d){
+                if(d.subscribe == '0'){
+                    return '未关注';
+                }else if(d.subscribe == '1'){
+                    return '已关注';
+                }else if(d.subscribe == '2'){
+                    return '扫码未关注';
+                }else{
+                    return '取消关注';
+                }
+            }
+        }
+        , {
+            field: 'handle', title: '操作', width: '200',
+            templet: function (d) {
+                var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑会员\',\'/admin/member/edit?id=' + d.id + '\',900,480,true);">编辑</button>' +
+                    '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="x_admin_show(\'积分充值\',\'/admin/member/recharge?id=' + d.id + '\',480,480);">充值</button>' +
+                    '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'积分日志\',\'/admin/member/point?id=' + d.id + '\',900,500,true);">积分</button>'+
+                    '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                return handle;
+            }
+        }
+    ];
+    if(role_id == 178){
+        tableHead = [ //表头
+            { type: 'checkbox', fixed: 'left' }
+            , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+            , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+            , { field: 'uname', title: '账号', width: '100',fixed: 'left' }
+            , { field: 'realname', title: '姓名', width: '100' }
+            , { field: 'mobile', title: '电话',width:'120' }
+            , { field: 'rank_name', title: '等级', width: '100'}
+            , { field: 'point', title: '积分',width:'100' }
+            , { field: 'subor', title: '会员数', width: '100' }
+            , { field: 'topname', title: '上级会员', width: '100' }
+            , { field: 'checked', title: '审核状态', width: '100',
+                templet:function(d){
+                    if(d.checked == '0'){
+                        return '待审';
+                    }else if(d.checked == '1'){
+                        return '正常';
+                    }
+                }
+            }
+            , { field: 'status', title: '会员状态', width: '100',
+                templet:function(d){
+                    if(d.status == '0'){
+                        return '正常';
+                    }else if(d.status == '1'){
+                        return '锁定';
+                    }else{
+                        return '禁言';
+                    }
+                }
+            }
+            , { field: 'type', title: '类型',width:'100',
+                templet:function(d){
+                    var type = '会员';
+                    if(d.type==1){
+                        type = '技工';
+                    }else if(d.type==2){
+                        type = '工长';
+                    }else if(d.type==3){
+                        type = '设计师';
+                    }else if(d.type==4){
+                        type = '装饰公司';
+                    }else if(d.type==5){
+                        type = '商家';
+                    }else if(d.type==6){
+                        type = '业主';
+                    }
+                    return type;
+                }
+            }
+            , { field: 'source', title: '来源', width: '100',
+                templet:function(d){
+                    var source = 'PC端注册';
+                    if(d.source == '1'){
+                        source = '识别二维码';
+                    }else if(d.source == '2'){
+                        source = '自主关注';
+                    }else if(d.source == '3'){
+                        source = '公众号菜单栏';
+                    }else if(d.source == '4'){
+                        source = '分享链接';
+                    }
+                    return source;
+                }
+            }
+            , { field: 'lastlogin', title: '最后登录',width:'150' }
+            , { field: 'loginip', title: '最后ip', width: '150' }
+            , { field: 'create_time', title: '注册时间', width: '150' }
+            , { field: 'subscribe', title: '是否关注', width: '150',
+                templet:function(d){
+                    if(d.subscribe == '0'){
+                        return '未关注';
+                    }else if(d.subscribe == '1'){
+                        return '已关注';
+                    }else if(d.subscribe == '2'){
+                        return '扫码未关注';
+                    }else{
+                        return '取消关注';
+                    }
+                }
+            }
+            , {
+                field: 'handle', title: '操作', width: '200',
+                templet: function (d) {
+                    var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑会员\',\'/admin/member/edit?id=' + d.id + '\',900,480,true);">编辑</button>' +
+                        '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'积分日志\',\'/admin/member/point?id=' + d.id + '\',900,500,true);">积分</button>';
+                    return handle;
+                }
+            }
+        ];
+    }
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -30,112 +229,21 @@
             , limit: 20
             , id: 'test'
             , cols: [
-                [ //表头
-                    { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: '序号', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'uid', title: 'UID', width: '8%', }
-                    , { field: 'uname', title: '账号', width: '8%', }
-                    , { field: 'realname', title: '姓名', width: '8%' }
-                    , { field: 'type', title: '类型',width:'5%',
-                        templet:function(d){
-                            var type = '会员';
-                            if(d.type==1){
-                                type = '技工';
-                            }else if(d.type==2){
-                                type = '工长';
-                            }else if(d.type==3){
-                                type = '设计师';
-                            }else if(d.type==4){
-                                type = '装饰公司';
-                            }else if(d.type==5){
-                                type = '商家';
-                            }else if(d.type==6){
-                                type = '业主';
-                            }
-                            return type;
-                        }
-                    }
-                    , { field: 'mobile', title: '电话',width:'8%' }
-                    , { field: 'rank_name', title: '等级', width: '5%'}
-                    , { field: 'point', title: '积分',width:'5%' }
-                    , { field: 'area', title: '地区',width:'8%',
-                        templet:function(d){
-                            if(d.county){
-                                var area = d.province_name + '-' + d.city_name + '-' + d.county_name;
-                            }else{
-                                var area = '总站';
-                            }
-                            return area;
-                        } 
-                    }
-                    , { field: 'subor', title: '会员数', width: '6%' }
-                    , { field: 'topname', title: '上级会员', width: '6%' }
-                    , { field: 'source', title: '来源', width: '8%',
-                        templet:function(d){
-                            var source = 'PC端注册';
-                            if(d.source == '1'){
-                                source = '识别二维码';
-                            }else if(d.source == '2'){
-                                source = '自主关注';
-                            }else if(d.source == '3'){
-                                source = '公众号菜单栏';
-                            }else if(d.source == '4'){
-                                source = '分享链接';
-                            }
-                            return source;
-                        }
-                    }
-                    , { field: 'lastlogin', title: '最后登录',width:'8%' }
-                    , { field: 'loginip', title: '最后ip', width: '8%' }
-                    , { field: 'create_time', title: '注册时间', width: '8%' }
-                    , { field: 'status', title: '状态', width: '5%',
-                        templet:function(d){
-                            if(d.status == '0'){
-                                return '正常';
-                            }else if(d.status == '1'){
-                                return '锁定';
-                            }else{
-                                return '禁言';
-                            }
-                        }
-                    }
-                    , { field: 'subscribe', title: '是否关注', width: '8%',
-                        templet:function(d){
-                            if(d.subscribe == '0'){
-                                return '未关注';
-                            }else if(d.subscribe == '1'){
-                                return '已关注';
-                            }else if(d.subscribe == '2'){
-                                return '扫码未关注';
-                            }else{
-                                return '取消关注';
-                            }
-                        }
-                    }
-                    , {
-                        field: 'handle', title: '操作', width: '10%',
-                        templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑会员\',\'/admin/member/edit?id=' + d.id + '\',900,480,true);">编辑</button>' +
-                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="x_admin_show(\'积分充值\',\'/admin/member/recharge?id=' + d.id + '\',480,480);">充值</button>' +
-                                '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'积分日志\',\'/admin/member/point?id=' + d.id + '\',900,500,true);">积分</button>';
-                            return handle;
-                        }
-                    }
-                ]
+                tableHead
             ]
         });
     });
     function delAll(argument) {
         var data = tableCheck.getData();
-        layer.confirm('确认要全部删除吗？', function (index) {
+        /* layer.confirm('确认要全部删除吗？', function (index) {
             //捉到所有被选中的，发异步进行删除
             layer.msg('删除成功', { icon: 1 });
             $(".layui-form-checked").not('.header').parents('tr').remove();
-        });
+        }); */
     }
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/member/delete', { id: id }, function (j) {
+            $.post('/admin/member/deleteUser', { id: id }, function (j) {
                 if(j.code == 200){
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
