--- a/application/admin/view/company/index.html
+++ b/application/admin/view/company/index.html
@@ -19,7 +19,7 @@
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加装饰公司','add.html',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','search.html',400,280)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','search.html',800,400)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -32,6 +32,101 @@
 {include file="public/foot"}
 <script>
     var tableIns;
+    var role_id = "{$role_id}";
+    console.log(role_id);
+    var tableHead = [ //表头
+        { type: 'checkbox', fixed: 'left', width: '50' }
+        , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+        , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+        , { field: 'uname', title: '账号', width: '100', }
+        , { field: 'name', title: '公司名称', width: '100' }
+        , { field: 'short_name', title: '公司简称', width: '100', }
+        , { field: 'phone', title: '电话', width: '150' }
+        , { field: 'rank_name', title: '会员等级', width: '100',}
+        , { field: 'point', title: '积分', width: '100',}
+        , { field: 'area', title: '地区', width: '150' }
+        , { field: 'subor', title: '会员数', width: '100' }
+        , { field: 'topname', title: '上级会员', width: '100' }
+        , { field: 'checked_title', title: '审核状态', width: '100',
+            templet:function(d){
+                if(d.checked == '0'){
+                    return '待审';
+                }else if(d.checked == '1'){
+                    return '正常';
+                }
+            }
+        }
+        , { field: 'zong', title: '总站', width: '80', }
+        , { field: 'sort', title: '排序', width: '80', }
+        , { field: 'create_time', title: '注册时间', width: '150' }
+        , { field: 'subscribe', title: '是否关注', width: '150',
+            templet:function(d){
+                if(d.subscribe == '0'){
+                    return '未关注';
+                }else if(d.subscribe == '1'){
+                    return '已关注';
+                }else if(d.subscribe == '2'){
+                    return '扫码未关注';
+                }else{
+                    return '取消关注';
+                }
+            }
+        }
+        , {
+            field: 'handle', title: '操作', width: '150',
+            templet: function (d) {
+                var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'公司团队\',\'/admin/company/team?company_id=' + d.id + '\',1000,480,true);">团队</button>' + '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑装饰公司\',\'/admin/company/edit?id=' + d.id + '\',800,480,true);">编辑</button>' + '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                return handle;
+            }
+        }
+    ];
+    if(role_id == 178){
+        tableHead = [ //表头
+            { type: 'checkbox', fixed: 'left', width: '50' }
+            , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+            , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+            , { field: 'uname', title: '账号', width: '100', }
+            , { field: 'name', title: '公司名称', width: '100' }
+            , { field: 'short_name', title: '公司简称', width: '100', }
+            , { field: 'phone', title: '电话', width: '150' }
+            , { field: 'rank_name', title: '会员等级', width: '100',}
+            , { field: 'point', title: '积分', width: '100',}
+            , { field: 'subor', title: '会员数', width: '100' }
+            , { field: 'topname', title: '上级会员', width: '100' }
+            , { field: 'checked_title', title: '审核状态', width: '100',
+                templet:function(d){
+                    if(d.checked == '0'){
+                        return '待审';
+                    }else if(d.checked == '1'){
+                        return '正常';
+                    }
+                }
+            }
+            , { field: 'zong', title: '总站', width: '80', }
+            , { field: 'sort', title: '排序', width: '80', }
+            , { field: 'create_time', title: '注册时间', width: '150' }
+            , { field: 'subscribe', title: '是否关注', width: '150',
+                templet:function(d){
+                    if(d.subscribe == '0'){
+                        return '未关注';
+                    }else if(d.subscribe == '1'){
+                        return '已关注';
+                    }else if(d.subscribe == '2'){
+                        return '扫码未关注';
+                    }else{
+                        return '取消关注';
+                    }
+                }
+            }
+            , {
+                field: 'handle', title: '操作', width: '150',
+                templet: function (d) {
+                    var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'公司团队\',\'/admin/company/team?company_id=' + d.id + '\',1000,480,true);">团队</button>' + '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑装饰公司\',\'/admin/company/edit?id=' + d.id + '\',800,480,true);">编辑</button>' + '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                    return handle;
+                }
+            }
+        ];
+    }
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -46,29 +141,7 @@
             , limit: 20
             , id: 'test'
             , cols: [
-                [ //表头
-                    { type: 'checkbox', fixed: 'left', width: '5%' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'name', title: '公司名称', width: '8%' }
-                    , { field: 'short_name', title: '公司简称', width: '8%', }
-                    , { field: 'uname', title: '账号', width: '8%', }
-                    , { field: 'rank_name', title: '会员等级', width: '10%',}
-                    , { field: 'superior_id', title: '上级会员', width: '8%'}
-                    , { field: 'subor', title: '下级数量', width: '8%'}
-                    , { field: 'phone', title: '手机', width: '8%' }
-                    , { field: 'area', title: '城市', width: '8%' }
-                    , { field: 'create_time', title: '创建时间', width: '8%' }
-                    , { field: 'endtime', title: '截止时间', width: '8%' }
-                    , { field: 'zong', title: '总站', width: '5%', }
-                    , { field: 'checked_title', title: '审核', width: '5%' }
-                    , {
-                        field: 'handle', title: '操作', width: '13%',
-                        templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'公司团队\',\'/admin/company/team?company_id=' + d.id + '\',1000,480,true);">团队</button>' + '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑装饰公司\',\'/admin/company/edit?id=' + d.id + '\',800,480,true);">编辑</button>' + '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
-                            return handle;
-                        }
-                    }
-                ]
+                tableHead
             ]
         });
         /**
