--- a/application/admin/view/designer/search.html
+++ b/application/admin/view/designer/search.html
@@ -8,40 +8,113 @@
     </style>
     <div class="x-body">
         <form class="layui-form" id='searchForm'>
-            <div class="layui-form-item">
-                <label class="layui-form-label">关键词</label>
-                <div class="layui-input-block">
-                    <input type="text" id="keywords" name="keywords" autocomplete="off"
-                        placeholder="请输入关键词" class="layui-input" value="" />
+            <div class="layui-row">
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">姓名</label>
+                        <div class="layui-input-block">
+                            <input type="text" id="name" name="realname" autocomplete="off"
+                                placeholder="请输入姓名" class="layui-input" value="" />
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">账号</label>
+                        <div class="layui-input-block">
+                            <input type="text" id="uname" name="uname" autocomplete="off"
+                                placeholder="请输入账号" class="layui-input" value="" />
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">UID</label>
+                        <div class="layui-input-block">
+                            <input type="text" id="uid" name="uid" autocomplete="off"
+                                placeholder="请输入用户UID" class="layui-input" value="" />
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">联系电话</label>
+                        <div class="layui-input-block">
+                            <input type="text" id="mobile" name="mobile" autocomplete="off"
+                                placeholder="请输入联系电话" class="layui-input" value="" />
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">审核状态</label>
+                        <div class="layui-input-block">
+                            <select lay-filter="cate" name="checked">
+                                <option value="">请选择</option>
+                                <option value="0">待审核</option>
+                                <option value="1">已审核</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">是否关注</label>
+                        <div class="layui-input-block">
+                            <select lay-filter="cate" name="subscribe">
+                                <option value="">请选择</option>
+                                <option value="0">未关注</option>
+                                <option value="1">已关注</option>
+                                <option value="2">已扫码未关注</option>
+                                <option value="3">取消关注</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                
             {if $user['county'] == ''}
-			<div class="layui-form-item" id="region">
-				<label class="layui-form-label">地&nbsp;&nbsp;&nbsp;区</label>
-				<div class="layui-input-inline">
-					<select name="province" lay-filter="province" id="province" >
-						<option value="">请选择省</option> 
-						{volist name='regin' id='vo'}
-						<option value="{$vo.region_code}">{$vo.region_name}</option>
-						{/volist}
-					</select>
-				</div>
-				<div class="layui-input-inline">
-					<select name="city" lay-filter="city" id="city" >
-						<option value="">请选择市</option>
-					</select>
-				</div>
-				<div class="layui-input-inline">
-					<select name="county" lay-filter="county" id="county" >
-						<option value="">请选择区/县</option>
-					</select>
-				</div>
-            </div>
+                <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">会员状态</label>
+                        <div class="layui-input-block">
+                            <select lay-filter="cate" name="status">
+                                <option value="">请选择</option>
+                                <option value="0">正常</option>
+                                <option value="2">禁言</option>
+                                <option value="1">锁定</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
+                    <div class="layui-form-item" id="region">
+                        <label class="layui-form-label">地&nbsp;&nbsp;&nbsp;区</label>
+                        <div class="layui-input-inline">
+                            <select name="province" lay-filter="province" id="province" >
+                                <option value="">请选择省</option> 
+                                {volist name='regin' id='vo'}
+                                <option value="{$vo.region_code}">{$vo.region_name}</option>
+                                {/volist}
+                            </select>
+                        </div>
+                        <div class="layui-input-inline">
+                            <select name="city" lay-filter="city" id="city" >
+                                <option value="">请选择市</option>
+                            </select>
+                        </div>
+                        <div class="layui-input-inline">
+                            <select name="county" lay-filter="county" id="county" >
+                                <option value="">请选择区/县</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
             {else}
 				<input type="hidden" name="province" value="{$user['province']}" />
 				<input type="hidden" name="city" value="{$user['city']}" />
 				<input type="hidden" name="county" value="{$user['county']}" />
 			{/if}
+            </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-submit lay-filter="searchSubmit">提交</button>
@@ -65,12 +138,7 @@
             setTimeout(function () {
                 x_admin_close();
                 parent.tableIns.reload({
-                    where: { //设定异步数据接口的额外参数，任意设
-                        keywords: data.field.keywords,
-                        province: data.field.province,
-                        city: data.field.city,
-                        county: data.field.county
-                    }
+                    where: data.field
                     , page: {
                         curr: 1 //重新从第 1 页开始
                     }
@@ -109,7 +177,8 @@
         form.on('select(city)',function(data){
             $.post('/api/region/index', { 
                 code: data.value,
-                type:2 
+                type:2,
+                is_open:2
             }, function(data){
                 var res = data.data;
                 if(data.code == 0){
