--- a/application/admin/view/gong_zhang/index.html
+++ b/application/admin/view/gong_zhang/index.html
@@ -19,7 +19,7 @@
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加工长','gongZhangAdd.html',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','earch.html',400,280)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','gongZhangSearch.html',800,400)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -32,6 +32,103 @@
 {include file="public/foot"}
 <script>
     var tableIns;
+    var role_id = "{$role_id}";
+    console.log(role_id);
+    var tableHead = [ //表头
+        { type: 'checkbox', fixed: 'left',width:'50' }
+        , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+        , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+        , { field: 'uname', title: '账号', width: '100',fixed: 'left' }
+        , { field: 'name', title: '姓名', width: '80' }
+        , { field: 'mobile', title: '电话', width: '150' }
+        , { field: 'rank_name', title: '会员等级', width: '80',}
+        , { field: 'point', title: '积分', width: '100',}
+        , { field: 'area', title: '地区', width: '150' }
+        , { field: 'subor', title: '会员数', width: '100' }
+        , { field: 'topname', title: '上级会员', width: '100' }
+        , { field: 'checked_title', title: '审核状态', width: '100',
+            templet:function(d){
+                if(d.checked == '0'){
+                    return '待审';
+                }else if(d.checked == '1'){
+                    return '正常';
+                }
+            }
+        }
+        , { field: 'zong', title: '总站', width: '80', }
+        , { field: 'case_num', title: '案例数', width: '80', }
+        , { field: 'sort', title: '排序', width: '80', }
+        , { field: 'create_time', title: '注册时间', width: '150' }
+        , { field: 'subscribe', title: '是否关注', width: '150',
+            templet:function(d){
+                if(d.subscribe == '0'){
+                    return '未关注';
+                }else if(d.subscribe == '1'){
+                    return '已关注';
+                }else if(d.subscribe == '2'){
+                    return '扫码未关注';
+                }else{
+                    return '取消关注';
+                }
+            }
+        }
+        , {
+            field: 'handle', title: '操作',width:'200',
+            templet: function (d) {
+                var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑工长\',\'/admin/gong_zhang/gongzhangEdit?id=' + d.id+'\',800,480,true);">编辑</button>' +
+                    '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                return handle;
+            }
+        }
+    ];
+    if(role_id == 178){
+        tableHead = [ //表头
+            { type: 'checkbox', fixed: 'left',width:'50' }
+            , { field: 'id', title: 'ID', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+            , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+            , { field: 'uname', title: '账号', width: '100',fixed: 'left' }
+            , { field: 'name', title: '姓名', width: '80' }
+            , { field: 'mobile', title: '电话', width: '150' }
+            , { field: 'rank_name', title: '会员等级', width: '80',}
+            , { field: 'point', title: '积分', width: '100',}
+            , { field: 'subor', title: '会员数', width: '100' }
+            , { field: 'topname', title: '上级会员', width: '100' }
+            , { field: 'checked_title', title: '审核状态', width: '100',
+                templet:function(d){
+                    if(d.checked == '0'){
+                        return '待审';
+                    }else if(d.checked == '1'){
+                        return '正常';
+                    }
+                }
+            }
+            , { field: 'zong', title: '总站', width: '80', }
+            , { field: 'case_num', title: '案例数', width: '80', }
+            , { field: 'sort', title: '排序', width: '80', }
+            , { field: 'create_time', title: '注册时间', width: '150' }
+            , { field: 'subscribe', title: '是否关注', width: '150',
+                templet:function(d){
+                    if(d.subscribe == '0'){
+                        return '未关注';
+                    }else if(d.subscribe == '1'){
+                        return '已关注';
+                    }else if(d.subscribe == '2'){
+                        return '扫码未关注';
+                    }else{
+                        return '取消关注';
+                    }
+                }
+            }
+            , {
+                field: 'handle', title: '操作',width:'150',
+                templet: function (d) {
+                    var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工长\',\'/admin/gong_zhang/gongzhangEdit?id=' + d.id+'\',800,480,true);">编辑</button>' +
+                        '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                    return handle;
+                }
+            }
+        ];
+    }
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -46,26 +143,7 @@
             , limit: 20
             , id: 'test'
             , cols: [
-                [ //表头
-                    { type: 'checkbox', fixed: 'left',width:'5%' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'name', title: '工长', width: '8%' }
-                    , { field: 'rank_name', title: '会员等级', width: '10%',}
-                    , { field: 'company_name', title: '所属公司', width: '15%', }
-                    , { field: 'mobile', title: '手机', width: '10%' }
-                    , { field: 'area', title: '城市', width: '10%' }
-                    , { field: 'create_time', title: '创建时间', width: '15%' }
-                    , { field: 'zong', title: '总站', width: '6%', }
-                    , { field: 'checked_title', title: '审核', width: '6%'}
-                    , {
-                        field: 'handle', title: '操作',width:'10%',
-                        templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工长\',\'/admin/gong_zhang/gongZhangEdit?id=' + d.id+'\',800,480,true);">编辑</button>' +
-                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
-                            return handle;
-                        }
-                    }
-                ]
+                tableHead
             ]
         });
         /**
@@ -132,6 +210,22 @@
                     });
                 } else {
                     layer.msg('删除失败', { icon: 5, time: 1000 });
+                }
+            }, 'json');
+        });
+    }
+    /**
+     * 推送
+    */
+    function tui(id){
+        layer.confirm('确认要推送吗？', function (index) {
+            $.post('/admin/gong_zhang/topOrDown', { id: id,type:2}, function (j) {
+                if (j.code == 200) {
+                    layer.msg('推送成功', { icon: 1, time: 1000 }, function () {
+                        location.reload();
+                    });
+                } else {
+                    layer.msg('推送失败', { icon: 5, time: 1000 });
                 }
             }, 'json');
         });
