--- a/application/admin/view/goods_cate/cate_edit.html
+++ b/application/admin/view/goods_cate/cate_edit.html
@@ -13,8 +13,11 @@
                     上级分类
                 </label>
                 <div class="layui-input-block">
-                    <select lay-filter="aihao" name="pid" id='pid' disabled="disabled">
-                        <option value="">{$p_title}</option>
+                    <select lay-filter="aihao" name="pid" id='pid'>
+                        <option value="0">顶级分类</option>
+                        {volist name='auth' id='vo'}
+                        <option value="{$vo.id}" {if condition="$vo['id'] == $data['pid']"}selected{/if}>{$vo.level-1|str_repeat='丨--',###}{$vo.title}</option>
+                        {/volist}
                     </select>
                 </div>
             </div>
