--- a/application/admin/view/shop/index.html
+++ b/application/admin/view/shop/index.html
@@ -17,11 +17,11 @@
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商家','shopAdd.html',820,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加商家
                 </button>
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商家','search.html',800,400)">
+                    <i class="layui-icon layui-icon-search"></i>搜索
+                </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
-                </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商家','search.html',800,500,true)">
-                    <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
         </script>
@@ -30,6 +30,87 @@
 {include file="public/foot"}
 <script>
     var tableIns;
+    var role_id = "{$role_id}";
+    console.log(role_id);
+    var tableHead = [ //表头
+        { type: 'checkbox', fixed: 'left', width: '50' }
+        , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+        , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+        , { field: 'uname', title: '账号', width: '100'}
+        , { field: 'name', title: '商家名称', width: '100' }
+        , { field: 'cate_title', title: '所属分类', width: '100' }
+        , { field: 'realname', title: '所属会员', width: '100'}
+        , { field: 'mobile', title: '联系电话', width: '150'}
+        , { field: 'rank_name', title: '会员等级', width: '100',}
+        , { field: 'area', title: '地区', width: '150',}
+        , { field: 'subor', title: '会员数', width: '100'}
+        , { field: 'superior_id', title: '上级会员', width: '100'}
+        , { field: 'checked', title: '审核状态', width: '100',
+            templet:function(d){
+                if(d.checked == '0'){
+                    return '<font style="color:red">待审核</font>';
+                }else if(d.checked == '1'){
+                    return '正常';
+                }
+            }
+        }
+        , { field: 'zong', title: '总站', width: '80', }
+        , { field: 'sort', title: '排序', width: '80', }
+        , { field: 'create_time', title: '注册时间', width: '150', }
+        , {
+            field: 'handle', title: '操作',width:'300',
+            templet: function (d) {
+                var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_new(\'/admin/shop/goToUcenter?id='+d.id+'\');">管理</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500,true);">商品</button>';
+                if(d.realname){
+                    var type = '解绑用户';
+                }else{
+                    var type = '绑定用户';
+                }
+                handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500,true);">用户</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家分类\',\'/admin/shop/cateLis?id=' + d.id + '\',1000,580,true);">分类</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480,true);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家推送\',\'/admin/shop/recommend?id=' + d.id + '&type=2\',800,580,true);">推送</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                return handle;
+            }
+        }
+    ];
+    if(role_id == 178){
+        tableHead = [ //表头
+            { type: 'checkbox', fixed: 'left', width: '50' }
+            , { field: 'id', title: '序号', width: '80', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+            , { field: 'uid', title: 'UID', width: '80',fixed: 'left' }
+            , { field: 'uname', title: '账号', width: '100'}
+            , { field: 'name', title: '商家名称', width: '100' }
+            , { field: 'cate_title', title: '所属分类', width: '100' }
+            , { field: 'realname', title: '所属会员', width: '100'}
+            , { field: 'mobile', title: '联系电话', width: '150'}
+            , { field: 'rank_name', title: '会员等级', width: '100',}
+            , { field: 'subor', title: '会员数', width: '100'}
+            , { field: 'superior_id', title: '上级会员', width: '100'}
+            , { field: 'checked', title: '审核状态', width: '100',
+                templet:function(d){
+                    if(d.checked == '0'){
+                        return '<font style="color:red">待审核</font>';
+                    }else if(d.checked == '1'){
+                        return '正常';
+                    }
+                }
+            }
+            , { field: 'zong', title: '总站', width: '80', }
+            , { field: 'sort', title: '排序', width: '80', }
+            , { field: 'create_time', title: '注册时间', width: '150', }
+            , {
+                field: 'handle', title: '操作',width:'300',
+                templet: function (d) {
+                    var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_new(\'/admin/shop/goToUcenter?id='+d.id+'\');">管理</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500,true);">商品</button>';
+                    if(d.realname){
+                        var type = '解绑用户';
+                    }else{
+                        var type = '绑定用户';
+                    }
+                    handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500,true);">用户</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家分类\',\'/admin/shop/cateLis?id=' + d.id + '\',1000,580,true);">分类</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480,true);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家推送\',\'/admin/shop/recommend?id=' + d.id + '&type=2\',800,580,true);">推送</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                    return handle;
+                }
+            }
+        ];
+    }
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -44,43 +125,7 @@
             , limit: 20
             , id: 'test'
             , cols: [
-                [ //表头
-                    { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'name', title: '商家名称', width: '10%' }
-                    , { field: 'cate_title', title: '所属分类', width: '7%' }
-                    , { field: 'area', title: '所属城市', width: '7%',}
-                    , { field: 'realname', title: '所属用户', width: '7%'}
-                    , { field: 'uname', title: '账号', width: '8%'}
-                    , { field: 'rank_name', title: '会员等级', width: '7%',}
-                    , { field: 'superior_id', title: '上级会员', width: '7%'}
-                    , { field: 'subor', title: '下级数量', width: '7%'}
-                    , { field: 'mobile', title: '联系电话', width: '8%'}
-                    , { field: 'checked', title: '审核状态', width: '8%',
-                        templet:function(d){
-                            if(d.checked == '0'){
-                                return '<font style="color:red">待审核</font>';
-                            }else if(d.checked == '1'){
-                                return '正常';
-                            }
-                        }
-                    }
-                    , { field: 'create_time', title: '创建时间', width: '8%', }
-                    , { field: 'endtime', title: '终止时间', width: '8%', }
-                    , {
-                        field: 'handle', title: '操作',width:'25%',
-                        templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500,true);">商品</button>';
-                            if(d.realname){
-                                var type = '解绑用户';
-                            }else{
-                                var type = '绑定用户';
-                            }
-                            handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500,true);">用户</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家分类\',\'/admin/shop/cateLis?id=' + d.id + '\',1000,580,true);">分类</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480,true);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家推送\',\'/admin/shop/recommend?id=' + d.id + '&type=2\',800,580,true);">推送</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
-                            return handle;
-                        }
-                    }
-                ]
+                tableHead
             ]
         });
         /**
