--- a/application/admin/view/shop_goods_attr/goods_attr.html
+++ b/application/admin/view/shop_goods_attr/goods_attr.html
@@ -65,24 +65,24 @@
                     <tr class="form-tr tr{$key}">
                         <td>
                             {$vo.id}
-                            <input type="hidden" class="id{$key}" name="form[{$key}][id]" value="{$vo.id}" />
+                            <input type="hidden" class="id{$key}" data-name="id" name="form[{$key}][id]" value="{$vo.id}" />
                         </td>
                         <td>
-                            <input type="text" class="layui-input name{$key}" name="form[{$key}][name]" value="{$vo.name}" placeholder="请输入规格名称" lay-verify="required" autocomplete="off" />
+                            <input type="text" class="layui-input name{$key}" name="form[{$key}][name]" value="{$vo.name}" data-name="name" placeholder="请输入规格名称" lay-verify="required" autocomplete="on" />
                         </td>
                         <td>
-                            <input type="text" class="layui-input price{$key}" name="form[{$key}][price]" value="{$vo.price}" placeholder="请输入市场价格" lay-verify="required" autocomplete="off" />
+                            <input type="text" class="layui-input price{$key}" name="form[{$key}][price]" value="{$vo.price}" data-name="price" placeholder="请输入市场价格" autocomplete="on" />
                         </td>
                         <td>
-                            <input type="text" class="layui-input shop_price{$key}" name="form[{$key}][shop_price]" value="{$vo.shop_price}" placeholder="请输入商铺价格" lay-verify="required" autocomplete="off" />
+                            <input type="text" class="layui-input shop_price{$key}" name="form[{$key}][shop_price]" data-name="shop_price" value="{$vo.shop_price}" placeholder="请输入商铺价格" lay-verify="required" autocomplete="on" />
                         </td>
                         <td>
-                            <input type="checkbox" class="layui-input online{$key}" name="form[{$key}][online]" lay-skin="switch" lay-text="上架|下架" value="1" {if condition="$vo.online == 1"}checked{/if}>
+                            <input type="checkbox" class="layui-input online{$key}" name="form[{$key}][online]" lay-skin="switch" data-name="online" lay-text="上架|下架" value="1" {if condition="$vo.online == 1"}checked{/if}>
                         </td>
                         <td>
-                            <input type="text" class="layui-input unit{$key}" name="form[{$key}][unit]" value="{$vo.unit}" placeholder="请输入单位名称" lay-verify="required" autocomplete="off" />
+                            <input type="text" class="layui-input unit{$key}" name="form[{$key}][unit]" value="{$vo.unit}" data-name="unit" placeholder="请输入单位名称" lay-verify="required" autocomplete="on" />
                         </td>
-                        <td>
+                        <td class="upl">
                             <div class="layui-upload">
                                 <button type="button" class="layui-btn layui-btn-sm upload-img{$key}"
                                     data-key="{$key}">上传图片</button>
@@ -94,16 +94,16 @@
                             </div>
                         </td>
                         <td>
-                            <input type="text" class="layui-input pay_one{$key}" name="form[{$key}][pay_one]" value="{$vo.pay_one}" placeholder="请输入第一批比例" autocomplete="off" />
+                            <input type="text" class="layui-input pay_one{$key}" name="form[{$key}][pay_one]" value="{$vo.pay_one}" data-name="pay_one" placeholder="请输入第一批比例" autocomplete="on" />
                         </td>
                         <td>
-                            <input type="text" class="layui-input pay_two{$key}" name="form[{$key}][pay_two]" value="{$vo.pay_two}" placeholder="请输入第二批比例" autocomplete="off" />
+                            <input type="text" class="layui-input pay_two{$key}" name="form[{$key}][pay_two]" value="{$vo.pay_two}" data-name="pay_two" placeholder="请输入第二批比例" autocomplete="on" />
                         </td>
                         <td>
-                            <input type="text" class="layui-input pay_three{$key}" name="form[{$key}][pay_three]" value="{$vo.pay_three}" placeholder="请输入第三批比例" autocomplete="off" />
+                            <input type="text" class="layui-input pay_three{$key}" name="form[{$key}][pay_three]" value="{$vo.pay_three}" data-name="pay_three" placeholder="请输入第三批比例" autocomplete="on" />
                         </td>
                         <td>
-                            <input type="text" class="layui-input sort{$key}" name="form[{$key}][sort]" value="{$vo.sort}" placeholder="请输入序号"  autocomplete="off" />
+                            <input type="text" class="layui-input sort{$key}" name="form[{$key}][sort]" value="{$vo.sort}" data-name="sort" placeholder="请输入序号"  autocomplete="on" />
                         </td>
                         <td>
                             <button type="button" class="layui-btn layui-btn-xs"
@@ -239,26 +239,39 @@
     */
     function addOne(){
         var length = $('.form-tr').length;
+        if(length > 0){
+            var len = length - 1;
+        }else{
+            var len = 0;
+        }
+        var name = $(".name"+len).val() === undefined?"":$(".name"+len).val();
+        var price = $(".price"+len).val() === undefined?"":$(".price"+len).val();
+        var shop_price = $(".shop_price"+len).val() === undefined?"":$(".shop_price"+len).val();
+        var unit = $(".unit"+len).val() === undefined?"":$(".unit"+len).val();
+        var pay_one = $(".pay_one"+len).val() === undefined?"":$(".pay_one"+len).val();
+        var pay_two = $(".pay_two"+len).val() === undefined?"":$(".pay_two"+len).val();
+        var pay_three = $(".pay_three"+len).val() === undefined?"":$(".pay_three"+len).val();
+        var sort = $(".sort"+len).val() === undefined?"":$(".sort"+len).val();
         var tr = '<tr class="form-tr tr'+length+'">'+
                     '<td>'+
-                        'New<input type="hidden" name="form['+length+'][id]" value="" />'+
+                        'New<input type="hidden" class="id'+length+'" data-name="id" name="form['+length+'][id]" value="" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input name'+length+'" name="form['+length+'][name]" value="" placeholder="请输入规格名称" lay-verify="required" autocomplete="off" />'+
+                        '<input type="text" class="layui-input name'+length+'" name="form['+length+'][name]" value="'+name+'" data-name="name" placeholder="请输入规格名称" lay-verify="required" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input price'+length+'" name="form['+length+'][price]" value="{$vo.price|default="0"}" placeholder="请输入市场价格" lay-verify="required" autocomplete="off" />'+
+                        '<input type="text" class="layui-input price'+length+'" name="form['+length+'][price]" value="'+price+'" data-name="price" placeholder="请输入市场价格" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input shop_price'+length+'" name="form['+length+'][shop_price]" value="{$vo.shop_price|default="0"}" placeholder="请输入商铺价格" lay-verify="required" autocomplete="off" />'+
+                        '<input type="text" class="layui-input shop_price'+length+'" name="form['+length+'][shop_price]" value="'+shop_price+'" data-name="shop_price" placeholder="请输入商铺价格" lay-verify="required" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="checkbox" class="layui-input online'+length+'" name="form['+length+'][online]" lay-skin="switch" lay-text="上架|下架" value="1">'+
+                        '<input type="checkbox" class="layui-input online'+length+'" name="form['+length+'][online]" data-name="online" lay-skin="switch" lay-text="上架|下架" value="1" checked>'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input unit'+length+'" name="form['+length+'][unit]" value="{$vo.unit|default=""}" placeholder="请输入单位名称" lay-verify="required" autocomplete="off" />'+
+                        '<input type="text" class="layui-input unit'+length+'" name="form['+length+'][unit]" value="'+unit+'" data-name="unit" placeholder="请输入单位名称" lay-verify="required" autocomplete="on" />'+
                     '</td>'+
-                    '<td>'+
+                    '<td class="upl">'+
                         '<div class="layui-upload">'+
                             '<button type="button" class="layui-btn layui-btn-sm upload-img'+length+'" data-key="'+length+'">上传图片</button>'+
                             '<div class="layui-upload-list">'+
@@ -268,16 +281,16 @@
                         '</div>'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input pay_one'+length+'" name="form['+length+'][pay_one]" value="" placeholder="请输入第一批比例" autocomplete="off" />'+
+                        '<input type="text" class="layui-input pay_one'+length+'" name="form['+length+'][pay_one]" value="'+pay_one+'" data-name="pay_one" placeholder="请输入第一批比例" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input pay_two'+length+'" name="form['+length+'][pay_two]" value="" placeholder="请输入第二批比例" autocomplete="off" />'+
+                        '<input type="text" class="layui-input pay_two'+length+'" name="form['+length+'][pay_two]" value="'+pay_two+'" data-name="pay_two" placeholder="请输入第二批比例" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input pay_three'+length+'" name="form['+length+'][pay_three]" value="" placeholder="请输入第三批比例" autocomplete="off" />'+
+                        '<input type="text" class="layui-input pay_three'+length+'" name="form['+length+'][pay_three]" value="'+pay_three+'" data-name="pay_three" placeholder="请输入第三批比例" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
-                        '<input type="text" class="layui-input sort'+length+'" name="form['+length+'][sort]" value="" placeholder="请输入序号" autocomplete="off" />'+
+                        '<input type="text" class="layui-input sort'+length+'" name="form['+length+'][sort]" value="'+sort+'" placeholder="请输入序号" data-name="sort" autocomplete="on" />'+
                     '</td>'+
                     '<td>'+
                         '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" data-key='+length+' onclick="delThis(this)">取消</button>'+
@@ -291,9 +304,49 @@
      * 删除一条
     */
     function delThis(e){
-        console.log($(e).data('key'));
+        console.log($(e).data('key')+'////');
         var key = $(e).data('key');
         $('.tr'+key).remove();
+        
+        var length = $('.form-tr').length;
+        if(length > 0){
+            var tr = $('.form-tr');
+            tr.each(function(i,v){
+                $(v).removeClass();
+                $(v).addClass('form-tr tr'+i);
+                var td = $(v).children();
+                td.each(function(n,m){
+                    if($(m).hasClass('upl')){
+                        //文件上传
+                        var button = $(m).children('div.layui-upload').children('button');
+                        $(button).removeClass();
+                        $(button).addClass('layui-btn layui-btn-sm upload-img'+i);
+                        $(button).attr('data-key',i);
+                        var list = $(m).children('div.layui-upload').children('div.layui-upload-list');
+                        var img = $(list).children('img');
+                        var input = $(list).children('input');
+                        $(img).removeClass();
+                        $(img).addClass('layui-upload-img demo'+i);
+                        $(input).removeClass();
+                        $(input).addClass('thumb'+i);
+                        $(input).attr('name','form['+i+'][thumb]');
+                    }else{
+                        //输入框
+                        var input = $(m).children('input');
+                        var name = $(input).data('name');
+                        $(input).removeClass();
+                        $(input).addClass('layui-input '+name+i);
+                        $(input).attr('name','form['+i+']['+name+']');
+                        //取消按钮
+                        var button = $(m).children('button');
+                        if(button.length){
+                            console.log(button);
+                            $(button).attr('data-key',i);
+                        }
+                    }
+                });
+            });
+        }
         form.render();
         uploadImg(length);
     }
